--- a/templates/business_forms/new_product_form.html
+++ b/templates/business_forms/new_product_form.html
@@ -31,23 +31,24 @@
                         </div>
                     </div>
                     <div class="description_container_header_body" dir="auto">
-                        Приветствую вас!
+                        Всем доброго дня!
                         <br>
-                        Меня зовут Светлана Валентиновна Заболотная, врач-невролог, реабилитолог, специалист по лечению
-                        боли.
+                        <br>
+                        Меня зовут Кушнир Марина Александровна, врач-кардиолог, терапевт.
                         <br>
                         <br>
                         Вы очень поможете, если ответите на вопросы в анкете. Опрос анонимный.
                         <br>
                         <br>
                         Вопросы касаются вашего здоровья. Благодаря ответам я смогу сделать продукт, который поможет ВАМ
-                        и сотням человек улучшить свое здоровье, избавиться от боли и повысить качество жизни.
+                        и сотням человек улучшить свое здоровье, понять в чём причина аритмии, научиться её
+                        контролировать и повысить качество жизни.
                         <br>
                         <br>
                         Время заполнения - 3 минуты
                         <br>
                         <br>
-                        Всех, кто ответит на все вопросы, будет ждать приятный подарок от меня в конце 😋🎁
+                        Всех, кто ответит на все вопросы, будет ждать приятный подарок от меня в конце 😌🎁
                     </div>
                 </div>
             </div>
@@ -63,8 +64,8 @@
                                             Оставьте свои контактные данные, если хотите со мной <b>созвониться на
                                             30</b>
                                             минут. Я проведу мини-интервью, задам более детальные вопросы, в свою
-                                            очередь подарю вам <b>лекцию на выбор про профилактику мигрени или на тему
-                                            «мигрень и беременность: от подготовки до лактации»</b>
+                                            очередь подарю вам второе мнение по вашему клиническому случаю или по
+                                            состоянию здоровья.
                                         </div>
                                     </div>
                                 </div>
