--- a/templates/business_forms/new_product_form.html
+++ b/templates/business_forms/new_product_form.html
@@ -27,7 +27,7 @@
                 <div class="description_container_header_container">
                     <div class="description_container_header">
                         <div class="description_container_header_text" dir="auto" role="heading" aria-level="1">
-                            Анкета нового продукта
+                            Анкета нового продукта по аритмиям
                         </div>
                     </div>
                     <div class="description_container_header_body" dir="auto">
@@ -41,7 +41,7 @@
                         <br>
                         <br>
                         Вопросы касаются вашего здоровья. Благодаря ответам я смогу сделать продукт, который поможет ВАМ
-                        и сотням человек улучшить свое здоровье, понять в чём причина аритмии, научиться её
+                        и сотням человек улучшить свое здоровье, понять <b>в чём причина аритмии</b>, научиться её
                         контролировать и повысить качество жизни.
                         <br>
                         <br>
@@ -64,8 +64,8 @@
                                             Оставьте свои контактные данные, если хотите со мной <b>созвониться на
                                             30</b>
                                             минут. Я проведу мини-интервью, задам более детальные вопросы, в свою
-                                            очередь подарю вам второе мнение по вашему клиническому случаю или по
-                                            состоянию здоровья.
+                                            очередь подарю вам экспресс-консультацию (второе мнение) по вашему
+                                            клиническому случаю или по состоянию здоровья.
                                         </div>
                                     </div>
                                 </div>
