--- a/templates/business_forms/spasibo_new_product_form.html
+++ b/templates/business_forms/spasibo_new_product_form.html
@@ -25,7 +25,7 @@
             <div class="description_container_header_cap"></div>
             <div class="">
                 Спасибо за честные ответы! Напишите мне в тг <a href="https://t.me/doc_kushnir" target="_blank">https://t.me/doc_kushnir</a>
-                слово ИНТЕРВЬЮ, если хочешь забрать бонусную лекцию побыстрее 😇
+                слово ИНТЕРВЬЮ, если хочешь получить «второе мнение» побыстрее 😇
             </div>
         </div>
     </div>
